--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "blearapp",
-    "slug": "blearapp",
+    "name": "GDS",
+    "slug": "GDS",
     "platforms": [
       "ios",
       "android",
