--- a/app.json
+++ b/app.json
@@ -9,9 +9,9 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icon1.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/fav.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
