--- a/app.json
+++ b/app.json
@@ -21,10 +21,9 @@
     "assetBundlePatterns": [
       "**/*"
     ],
-    "ios": {
-      "bundleIdentifier": "com.thamardaw.gds",
-      "buildNumber": "1.0.0",
-      "supportsTablet": true
+    "android": {
+      "package": "com.thamardaw.gds",
+      "versionCode": 1
     },
     "description": "GDS app alpha",
     "githubUrl": "https://github.com/jasonIV/GDSApp.git"
