--- a/app.json
+++ b/app.json
@@ -22,10 +22,10 @@
       "**/*"
     ],
     "android": {
-      "package": "com.thamardaw.gds",
+      "package": "com.jasonIV.gds",
       "versionCode": 1
     },
-    "description": "GDS app alpha",
+    "description": "GDS",
     "githubUrl": "https://github.com/jasonIV/GDSApp.git"
   }
 }
